--- a/code.html
+++ b/code.html
@@ -10,20 +10,102 @@
 </head>
 <body>
     <div class="grid-container">
-        <div>1</div>
-        <div>2</div>
-        <div>3</div>
-        <div>4</div>
-        <div>5</div>
+        <div id="grass1">1</div>
+        <div id="grass2">2</div>
+        <div id="grass1">3</div>
+        <div id="grass2">4</div>
+        <div id="line">5</div>
         <div>6</div>
         <div>7</div>
-        <div>8</div>
+        <div id="inner-line">8</div>
         <div>9</div>
-        <div>10</div>
+        <div id="inner-line">10</div>
         <div>11</div>
-        <div>12</div>
-        <div>13</div>
-        <div>200</div>
+        <div id="line">12</div>
+        <div id="grass2">13</div>
+        <div id="grass1">14</div>
+        <div id="grass2">15</div>
+        <div id="grass1">16</div>
+        <div id="grass2">17</div>
+        <div id="grass1">18</div>
+        <div id="grass2">19</div>
+        <div id="grass1">20</div>
+        <div id="line">21</div>
+        <div>22</div>
+        <div>23</div>
+        <div id="inner-line">24</div>
+        <div>25</div>
+        <div id="inner-line">26</div>
+        <div>27</div>
+        <div id="line">28</div>
+        <div id="grass1">29</div>
+        <div id="grass2">30</div>
+        <div id="grass1">31</div>
+        <div id="grass2">32</div>
+        <div id="grass1">33</div>
+        <div id="grass2">34</div>
+        <div id="grass1">35</div>
+        <div id="grass2">36</div>
+        <div id="line">37</div>
+        <div>38</div>
+        <div>39</div>
+        <div id="inner-line">40</div>
+        <div>41</div>
+        <div id="inner-line">42</div>
+        <div>43</div>
+        <div id="line">44</div>
+        <div id="grass2">45</div>
+        <div id="grass1">46</div>
+        <div id="grass2">47</div>
+        <div id="grass1">48</div>
+        <div id="grass2">49</div>
+        <div id="grass1">50</div>
+        <div id="grass2">51</div>
+        <div id="grass1">52</div>
+        <div id="line">53</div>
+        <div>54</div>
+        <div>55</div>
+        <div id="inner-line">56</div>
+        <div><img src="images.jpeg" alt="images"></div>
+        <div id="inner-line">58</div>
+        <div>59</div>
+        <div id="line">60</div>
+        <div id="grass1">61</div>
+        <div id="grass2">62</div>
+        <div id="grass1">63</div>
+        <div id="grass2">64</div>
+        <div id="grass1">65</div>
+        <div id="grass2">66</div>
+        <div id="grass1">67</div>
+        <div id="grass2">68</div>
+        <div id="line">69</div>
+        <div>70</div>
+        <div id>71</div>
+        <div id="inner-line">72</div>
+        <div>73</div>
+        <div id="inner-line">74</div>
+        <div>75</div>
+        <div id="line">76</div>
+        <div id="grass2">77</div>
+        <div id="grass1">78</div>
+        <div id="grass2">79</div>
+        <div id="grass1">80</div>
+        <div id="grass2">81</div>
+        <div id="grass1">82</div>
+        <div id="grass2">83</div>
+        <div id="grass1">84</div>
+        <div id="line">85</div>
+        <div>86</div>
+        <div>87</div>
+        <div id="inner-line">88</div>
+        <div>89</div>
+        <div id="inner-line">90</div>
+        <div>91</div>
+        <div id="line">92</div>
+        <div id="grass1">93</div>
+        <div id="grass2">94</div>
+        <div id="grass1">95</div>
+        <div id="grass2">96</div>
     </div>
 </body>
 </html>
