--- a/code.html
+++ b/code.html
@@ -105,7 +105,7 @@
         <div id="grass1">93</div>
         <div id="grass2">94</div>
         <div id="grass1">95</div>
-        <div id="grass2">96</div>
+        <div id="grass2">96.</div>
     </div>
 </body>
 </html>
