--- a/code.html
+++ b/code.html
@@ -9,65 +9,34 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="grid-background">
     <div class="grid-container">
-        <div id="grass1">1</div>
-        <div id="grass2">2</div>
-        <div id="grass1">3</div>
-        <div id="grass2">4</div>
-        <div id="line">5</div>
-        <div>6</div>
-        <div id="inner-line">7</div>
-        <div>8</div>
-        <div id="inner-line">9</div>
-        <div>10</div>
-        <div id="line">11</div>
-        <div id="grass2">12</div>
-        <div id="grass1">13</div>
-        <div id="grass2">14</div>
-        <div id="grass1">15</div>
+        <div class="TopLeft" id="grass1"></div>
+        <div id="grass2"></div>
+        <div id="grass1"></div>
+        <div id="grass2"></div>
+        <div id="line"></div>
+        <div id="lane"></div>
+        <div id="inner-line"></div>
+        <div id="lane"></div>
+        <div id="inner-line"></div>
+        <div id="lane"></div>
+        <div id="line"></div>
+        <div id="grass2"></div>
+        <div id="grass1"></div>
+        <div id="grass2"></div>
+        <div class="TopRight" id="grass1"></div>
 
         <div id="grass2"></div>
         <div id="grass1"></div>
         <div id="grass2"></div>
         <div id="grass1"></div>
         <div id="line"></div>
-        <div></div>
+        <div id="lane"></div>
         <div id="inner-line"></div>
-        <div></div>
+        <div id="lane"></div>
         <div id="inner-line"></div>
-        <div></div>
-        <div id="line"></div>
-        <div id="grass1"></div>
-        <div id="grass2"></div>
-        <div id="grass1"></div>
-        <div id="grass2"></div>
-
-        <div id="grass1"></div>
-        <div id="grass2"></div>
-        <div id="grass1"></div>
-        <div id="grass2"></div>
-        <div id="line"></div>
-        <div></div>
-        <div id="inner-line"></div>
-        <div></div>
-        <div id="inner-line"></div>
-        <div></div>
-        <div id="line"></div>
-        <div id="grass2"></div>
-        <div id="grass1"></div>
-        <div id="grass2"></div>
-        <div id="grass1"></div>
-
-        <div id="grass2"></div>
-        <div id="grass1"></div>
-        <div id="grass2"></div>
-        <div id="grass1"></div>
-        <div id="line"></div>
-        <div></div>
-        <div id="inner-line"></div>
-        <div><image id="imageMAIN" src="images.jpeg"></image></div>
-        <div id="inner-line"></div>
-        <div></div>
+        <div id="lane"></div>
         <div id="line"></div>
         <div id="grass1"></div>
         <div id="grass2"></div>
@@ -79,18 +48,51 @@
         <div id="grass1"></div>
         <div id="grass2"></div>
         <div id="line"></div>
-        <div></div>
+        <div id="lane"></div>
         <div id="inner-line"></div>
-        <div></div>
+        <div id="lane"></div>
         <div id="inner-line"></div>
-        <div></div>
+        <div id="lane"></div>
         <div id="line"></div>
         <div id="grass2"></div>
         <div id="grass1"></div>
         <div id="grass2"></div>
         <div id="grass1"></div>
+
+        <div id="grass2"></div>
+        <div id="grass1"></div>
+        <div id="grass2"></div>
+        <div id="grass1"></div>
+        <div id="line"></div>
+        <div id="LeftLane"></div>
+        <div id="inner-line"></div>
+        <div id="MiddleLane"><image id="imageMAIN" src="CarMain1.png"></image></div>
+        <div id="inner-line"></div>
+        <div id="RightLane"></div>
+        <div id="line"></div>
+        <div id="grass1"></div>
+        <div id="grass2"></div>
+        <div id="grass1"></div>
+        <div id="grass2"></div>
+
+        <div class="BottumLeft" id="grass1"></div>
+        <div id="grass2"></div>
+        <div id="grass1"></div>
+        <div id="grass2"></div>
+        <div id="line"></div>
+        <div id="lane"></div>
+        <div id="inner-line"></div>
+        <div id="lane"></div>
+        <div id="inner-line"></div>
+        <div id="lane"></div>
+        <div id="line"></div>
+        <div id="grass2"></div>
+        <div id="grass1"></div>
+        <div id="grass2"></div>
+        <div class="BottumRight" id="grass1"></div>
         
         
     </div>
+</div>
 </body>
 </html>
