--- a/code.html
+++ b/code.html
@@ -11,85 +11,85 @@
 <body>
     <div class="grid-background">
     <div class="grid-container">
-        <div class="TopLeft" id="grass1"></div>
-        <div id="grass2"></div>
-        <div id="grass1"></div>
-        <div id="grass2"></div>
+        <div class="grass1"></div>
+        <div class="grass2"></div>
+        <div class="grass1"></div>
+        <div class="grass2"></div>
         <div id="line"></div>
-        <div id="lane"></div>
+        <div id="lane1"><image id="Car1" src="2d yellow car.png"></image></div>
         <div id="inner-line"></div>
-        <div id="lane"></div>
+        <div id="lane1"></div>
         <div id="inner-line"></div>
-        <div id="lane"></div>
+        <div id="lane1"></div>
         <div id="line"></div>
-        <div id="grass2"></div>
-        <div id="grass1"></div>
-        <div id="grass2"></div>
-        <div class="TopRight" id="grass1"></div>
+        <div class="grass2"></div>
+        <div class="grass1"></div>
+        <div class="grass2"></div>
+        <div class="grass1"></div>
 
-        <div id="grass2"></div>
-        <div id="grass1"></div>
-        <div id="grass2"></div>
-        <div id="grass1"></div>
+        <div class="grass2"></div>
+        <div class="grass1"></div>
+        <div class="grass2"></div>
+        <div class="grass1"></div>
         <div id="line"></div>
-        <div id="lane"></div>
+        <div id="lane2"></div>
         <div id="inner-line"></div>
-        <div id="lane"></div>
+        <div id="lane2"></div>
         <div id="inner-line"></div>
-        <div id="lane"></div>
+        <div id="lane2"></div>
         <div id="line"></div>
-        <div id="grass1"></div>
-        <div id="grass2"></div>
-        <div id="grass1"></div>
-        <div id="grass2"></div>
+        <div class="grass1"></div>
+        <div class="grass2"></div>
+        <div class="grass1"></div>
+        <div class="grass2"></div>
 
-        <div id="grass1"></div>
-        <div id="grass2"></div>
-        <div id="grass1"></div>
-        <div id="grass2"></div>
+        <div class="grass1"></div>
+        <div class="grass2"></div>
+        <div class="grass1"></div>
+        <div class="grass2"></div>
         <div id="line"></div>
-        <div id="lane"></div>
+        <div id="lane3"></div>
         <div id="inner-line"></div>
-        <div id="lane"></div>
+        <div id="lane3"></div>
         <div id="inner-line"></div>
-        <div id="lane"></div>
+        <div id="lane3"></div>
         <div id="line"></div>
-        <div id="grass2"></div>
-        <div id="grass1"></div>
-        <div id="grass2"></div>
-        <div id="grass1"></div>
+        <div class="grass2"></div>
+        <div class="grass1"></div>
+        <div class="grass2"></div>
+        <div class="grass1"></div>
 
-        <div id="grass2"></div>
-        <div id="grass1"></div>
-        <div id="grass2"></div>
-        <div id="grass1"></div>
+        <div class="grass2"></div>
+        <div class="grass1"></div>
+        <div class="grass2"></div>
+        <div class="grass1"></div>
         <div id="line"></div>
         <div id="LeftLane"></div>
         <div id="inner-line"></div>
-        <div id="MiddleLane"><image id="imageMAIN" src="CarMain1.png"></image></div>
+        <div id="MiddleLane"><image id="ImageMain" src="CarMain1.png"></image></div>
         <div id="inner-line"></div>
         <div id="RightLane"></div>
         <div id="line"></div>
-        <div id="grass1"></div>
-        <div id="grass2"></div>
-        <div id="grass1"></div>
-        <div id="grass2"></div>
+        <div class="grass1"></div>
+        <div class="grass2"></div>
+        <div class="grass1"></div>
+        <div class="grass2"></div>
 
-        <div class="BottumLeft" id="grass1"></div>
-        <div id="grass2"></div>
-        <div id="grass1"></div>
-        <div id="grass2"></div>
+        <div class="grass1"></div>
+        <div class="grass2"></div>
+        <div class="grass1"></div>
+        <div class="grass2"></div>
         <div id="line"></div>
-        <div id="lane"></div>
+        <div id="lane5"></div>
         <div id="inner-line"></div>
-        <div id="lane"></div>
+        <div id="lane5"></div>
         <div id="inner-line"></div>
-        <div id="lane"></div>
+        <div id="lane5"></div>
         <div id="line"></div>
-        <div id="grass2"></div>
-        <div id="grass1"></div>
-        <div id="grass2"></div>
-        <div class="BottumRight" id="grass1"></div>
+        <div class="grass2"></div>
+        <div class="grass1"></div>
+        <div class="grass2"></div>
+        <div class="grass1"></div>
         
         
     </div>
